style: fixed alignment of list items

--- a/src/components/sidebar/SidebarHandle.module.css
+++ b/src/components/sidebar/SidebarHandle.module.css
@@ -29,7 +29,7 @@
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    margin: 2px 0;
+    margin: 4px 0;
 }
 
 .listNameIcon-1 {
