--- a/src/components/sidebar/SidebarItem.module.css
+++ b/src/components/sidebar/SidebarItem.module.css
@@ -1,6 +1,7 @@
 .sidebarItem {
     padding: 8px 12px;
     margin-bottom: 8px;
+    height: 20px;
     display: flex;
     transition: border-color .2s ease;
     cursor: pointer;
